# snakev2

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  README.md  audio.py  build.py  camera.py  config.py  game_state.py  gl_renderer.py  main.py  particle.py  persistence.py  pyproject.toml  resources.py  roadmap.md  shaders.py  snakeV2.py  ui.py  utils.py
dev/: check_frames.py  verify_screenshots.py
implementation_plan/: README.md  checks.md  frame_budget.md  phase_01_checker_turn_capture.md  phase_01_fixed_timestep.md  phase_01_frame_checker.md  phase_01_frame_instrumentation.md  phase_01_restore_guardrails.md  phase_01_smooth_motion.md  phase_02_body_length_and_tube.md  phase_02_body_snap.md  phase_02_frame_pacing.md  phase_02_near_plane_correctness.md  phase_02_performance_foundation.md  phase_02_remove_whiteout.md  phase_03_scene_exposure.md  phase_03_sky_sun_water_anchoring.md  phase_03_snake_spline_motion.md  phase_03_speed_tuning.md  phase_03_surface_reuse.md  phase_03_turn_artifacts.md  phase_04_body_tube_look.md  phase_04_camera_turn_motion.md  phase_04_procedural_animation.md  phase_04_snake_body_continuity.md  phase_04_terrain_cache.md  phase_04_terrain_surface.md  phase_05_dynamic_render_work.md  phase_05_frame_pacing.md  phase_05_head_apple_readability.md  phase_05_particle_physics.md  phase_05_snake_tube_body.md  phase_05_soft_shadow.md  phase_06_camera_dynamics.md  phase_06_camera_framing.md  phase_06_human_signoff.md  phase_06_renderer_and_quality.md  phase_06_snake_grounding_motion.md  phase_06_world_cleanup.md  phase_07_depth_fade.md  (+35 more)
(+9 files in other folders)
